# Learn_RayTracingTheNextWeek

./: CMakeLists.txt  README.md  final_scene.cpp
src/: aabb.h  aarect.h  color.h  hittable.h  hittable_list.h  material.h  sphere.h
test/: test_cornell_box.cpp  test_earth.cpp  test_emit.cpp  test_empty.cpp  test_render.cpp  test_spheres.cpp  test_texture.cpp
